--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
+  "files": [
+    "dist/"
+  ],
   "repository": {
     "type": "git",
     "url": "http://github.com/RedMser/csp.js.git"
